--- a/.editorconfig
+++ b/.editorconfig
@@ -5,28 +5,35 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace=true
 
-[*.{js,py}]
-charset = utf-8
-
-[*.py]
-indent_style = space
-indent_size = 4
-
+# -----------------------------------------------------------------------------
+# Org and Neorg: Organizational Tools
+# -----
 [*.{org,norg}]
 indent_style = space
 indent_size = 2
 max_line_length = 88
 
+# -----------------------------------------------------------------------------
+# Markdown Derivative Filetypes
+# -----
 [*.{md,qmd}]
 indent_style = space
 indent_size = 2
 max_line_length = 88
 
+# -----------------------------------------------------------------------------
+# Lua and Other Programming Languages
 [*.lua]
 indent_style = space
 indent_size = 2
 max_line_length = 80
 
+# -----------------------------------------------------------------------------
+# Main Programming Languages
+# - rust
+# - c++
+# - python
+# -----
 [*.rs]
 indent_style = unset
 indent_size = unset
@@ -37,3 +44,16 @@ indent_style = unset
 indent_size = unset
 max_line_length = unset
 
+[*.{js,py}]
+charset = utf-8
+
+[*.py]
+indent_style = space
+indent_size = 4
+
+# -----------------------------------------------------------------------------
+# HTML, CSS, website tools
+# -----
+[*.{html,css}]
+indent_style = space
+indent_size = 2
