--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ trim_trailing_whitespace=true
 
 # -----------------------------------------------------------------------------
 # Org and Neorg: Organizational Tools
-# -----
+# -----------------------------------
 [*.{org,norg}]
 indent_style = space
 indent_size = 2
@@ -15,7 +15,7 @@ max_line_length = 80
 
 # -----------------------------------------------------------------------------
 # Markdown Derivative Filetypes
-# -----
+# -----------------------------
 [*.{md,qmd}]
 indent_style = space
 indent_size = 2
@@ -23,6 +23,7 @@ max_line_length = 88
 
 # -----------------------------------------------------------------------------
 # Lua and Other Programming Languages
+# -----------------------------------
 [*.lua]
 indent_style = space
 indent_size = 2
@@ -30,10 +31,11 @@ max_line_length = 80
 
 # -----------------------------------------------------------------------------
 # Main Programming Languages
+# --------------------------
 # - rust
 # - c++
 # - python
-# -----
+# ---
 [*.rs]
 indent_style = unset
 indent_size = unset
@@ -52,8 +54,15 @@ indent_style = space
 indent_size = 4
 
 # -----------------------------------------------------------------------------
-# HTML, CSS, website tools
-# -----
+# html, css, website tools
+# ------------------------
 [*.{html,css}]
+indent_style = space
+indent_size = 2
+
+# -----------------------------------------------------------------------------
+# JSON
+# -----
+[*.json]
 indent_style = space
 indent_size = 2
