--- a/.editorconfig
+++ b/.editorconfig
@@ -5,36 +5,36 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace=true
 
-# =============================================================================
+# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # Org and Neorg: Organizational Tools
-# ===================================
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 [*.{org,norg}]
 indent_style = space
 indent_size = 2
 max_line_length = 80
 
-# =============================================================================
+# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # Markdown Derivative Filetypes
-# =============================
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 [*.{md,qmd}]
 indent_style = space
 indent_size = 2
 max_line_length = 88
 
-# =============================================================================
+# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # Lua and Other Programming Languages
-# ===================================
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 [*.lua]
 indent_style = space
 indent_size = 2
 max_line_length = 80
 
-# =============================================================================
+# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # Main Programming Languages
-# ==========================
-# - rust
-# - c++
-# - python
+# <<<<<<<<<<<<<<<<<<<<<<<<<<
+# * rust
+# * c++
+# * python
 [*.rs]
 indent_style = unset
 indent_size = unset
@@ -52,16 +52,16 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-# =============================================================================
+# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # html, css, website tools
-# ========================
+# <<<<<<<<<<<<<<<<<<<<<<<<
 [*.{html,css}]
 indent_style = space
 indent_size = 2
 
-# =============================================================================
+# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # JSON
-# ====
+# <<<<
 [*.json]
 indent_style = space
 indent_size = 2
