--- a/selene.toml
+++ b/selene.toml
@@ -1,6 +1,1 @@
-std = "neovim"
-
-[rules]
-global_usage = "allow"
-multiple_statements = "allow"
-incorrect_standard_library_use = "allow"
+std = "vim"
