wip(ctx): [IN PROGRESS] introduce contextive-ls by default.
The contextive language server provides the programmer with a method of
defining domain-specific terminology alongside code in such a fashion
that the properties of the text can be accessed through standard editor
functions. Please see their docs for more info.

--- a/.contextive/definitions.yml
+++ b/.contextive/definitions.yml
@@ -1,1 +1,5 @@
-
+contexts:
+  - name: Metacontext
+    domainVisionStatement: |
+      To describe core component types for my lazyvim configuration in a
+      descriptive and accessible way
