chore(style): update selene config and move vim lang definition
The standard is to use yaml instead of yml for yaml documents. Yml is
from my understanding simply an alternate in case of using a subprime
system cough windows.

--- a/selene.toml
+++ b/selene.toml
@@ -1,1 +1,8 @@
 std = "vim"
+
+[lints]
+mixed_table = "allow"
+incorrect_standard_library_use = "allow"
+different_requires = "allow"
+unused_variable = "allow"
+global_usage = "allow"
