init: move dotfiles and configuration documents from nightowl.nvim
The LazyVim implementation simply was getting in the way too much for my
taste, so instead we have transitioned to a kickstart.nvim
implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-tags
-test.sh
-.luarc.json
-nvim
+tt.*
+.tests
+doc/tags
+debug
+.repro
+foo.*
+*.log
+data
+lazy-lock.json
+lazyvim.json
+usage_data.json
