format(dots): enforce more strict formatter style on dotfiles
Now that formatting is working correctly, we can format our dotfiles
according to their filetypes correctly.

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,8 +1,13 @@
 {
   "workspace.checkThirdParty": false,
   "diagnostics.workspaceDelay": 500,
-  "diagnostics.disable": ["different-requires", "unused-local"],
-  "diagnostics.globals": ["vim"],
+  "diagnostics.disable": [
+    "different-requires",
+    "unused-local"
+  ],
+  "diagnostics.globals": [
+    "vim"
+  ],
   "completion": {
     "callSnippet": "Both"
   },
