wip(move): allow system to lay dormant for several days

--- a/templates/template.nvim/cbfmt.toml
+++ b/templates/template.nvim/cbfmt.toml
@@ -1,8 +1,8 @@
 [languages]
 rust = ["rustfmt"]
-go = ["gofmt"]
 lua = ["stylua -s -"]
 python = ["black --fast -"]
 yaml = ["yamlfmt"]
 bash = ["shfmt"]
 clojure = ["zprint"]
+toml = ['taplo fmt -']
