--- a/.editorconfig
+++ b/.editorconfig
@@ -40,3 +40,11 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 max_line_length = 80
+
+# ------------------------------------------------------------------------------
+# TOML
+# ----
+[*.toml]
+indent_style = space
+indent_size = 2
+max_line_length = 80
