chore(cfg): clean up superfluous config files
Shifts some stuff around, seeking to be as idiomatic as possible.

--- a/.luarc.json
+++ b/.luarc.json
@@ -12,7 +12,7 @@
     "callSnippet": "Both"
   },
   "hint": {
-    "enabled": true,
+    "enable": true,
     "setType": true,
     "arrayIndex": "Enable",
     "paramType": true,
